--- a/about-us.html
+++ b/about-us.html
@@ -21,6 +21,7 @@
     <p class="text-left" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, molestias necessitatibus soluta quae distinctio eaque aspernatur non totam nostrum, incidunt molestiae quisquam, cum ut? Sint veniam ab eum eveniet expedita!</p>
     <h3 class="text-left" >Vizyonumuz</h3>
     <p class="text-left" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestias minima consectetur voluptates? Nemo reprehenderit aperiam odio sint laborum molestiae commodi laboriosam temporibus, necessitatibus fuga. Mollitia nostrum tenetur iste nam.</p>
+    <div style="flex-grow:1"></div>
     <footer>
         <a href="index.html">Anasayfa</a>
         <a href="products.html">Ürünler</a>
