--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     </nav>
     <h2>Anasayfa</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum ex autem iste commodi facilis animi doloremque ab, necessitatibus facere.</p>
-    <h3><a style="color: yellowgreen;" href="products.html">Sitemizde Bulunan Ürünler</a></h3>
+    <h3><a style="color: #ffe268;" href="products.html">Sitemizde Bulunan Ürünler</a></h3>
     <ul>
         <li>Ürün1</li>
         <li>Ürün2</li>
         <li>Ürün3</li>
         <li>Ürün4</li>
     </ul>
+    <div style="flex-grow:1"></div>
     <footer>
         <a href="index.html">Anasayfa</a>
         <a href="products.html">Ürünler</a>
