--- a/products.html
+++ b/products.html
@@ -28,6 +28,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit repudiandae harum molestiae. <strong>9000 USD</strong> </p>
         </ol>
     </div>
+    <div style="flex-grow:1"></div>
     <footer>
         <a href="index.html">Anasayfa</a>
         <a href="products.html">Ürünler</a>
