--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     </nav>
     <h2 class="text-left" >İletişim</h2>
     <p class="text-left" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, quibusdam?</p>
+    <div style="flex-grow:1"></div>
     <footer>
         <a href="index.html">Anasayfa</a>
         <a href="products.html">Ürünler</a>
